--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/index.css">
     <title>Document</title>
 </head>
 <body>
     <h1>Index</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum vero quaerat optio quibusdam voluptatem?</p>
+
+    <script src="js/index.js"></script>
 </body>
 </html>
